[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.13"

# UV global tools - installed as isolated environments via uv tool install.
# Listed here for Renovate to track version updates.
# These conflict with each other so cannot be co-installed; use: uv tool install <package>
[dependency-groups]
tools = [
  "aider-chat>=0.86.2",
  "claude-swap>=0.9.0",
  "huggingface-hub[mcp]>=1.12.0",
  "marker-pdf>=1.10.2",
  "mempalace>=3.3.3",
  "mistral-vibe>=2.9.0",
  "nvitop>=1.6.2",
  "ruff>=0.15.12",
  "serena-agent>=1.2.0",
  "transformers>=5.6.2",
  "vllm>=0.20.0",
  "vllm-mlx>=0.2.9",
]
# Hermes gateway runtime deps - installed into hermes venv via uv pip install
hermes = [
  "python-telegram-bot[webhooks]>=22.7,<23",
  "croniter>=6.2.2,<7",
  "fastapi[standard]>=0.136.1",
  "uvicorn>=0.46.0",
]

[tool.uv]
exclude-newer = "1 week"

[tool.uv-globals]
# Packages that require --prerelease=allow during uv tool install
prerelease = ["serena-agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
