[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">=3.13"

# UV global tools - installed as isolated environments via uv tool install.
# Listed here for Renovate to track version updates.
# These conflict with each other so cannot be co-installed; use: uv tool install <package>
[dependency-groups]
tools = [
  "aider-chat>=0.86.2",
  "claude-swap>=0.21.0",
  "graphifyy>=0.9.12",
  "huggingface-hub[mcp]>=1.23.0",
  "marker-pdf>=1.10.2",
  "mempalace>=3.5.0",
  "mistral-vibe>=2.20.0",
  "nvitop>=1.7.0",
  "ruff>=0.15.20",
  "serena-agent>=1.5.3",
  "transformers>=5.13.0",
  "vllm>=0.25.0",
  "vllm-mlx>=0.4.0",
]
# Hermes gateway runtime deps - installed into hermes venv via uv pip install
hermes = [
  "python-telegram-bot[webhooks]>=22.8,<23",
  "croniter>=6.2.3,<7",
  "fastapi[standard]>=0.139.0",
  "uvicorn>=0.51.0",
]

[tool.uv]
exclude-newer = "1 week"

[tool.uv-globals]
# Packages that require --prerelease=allow during uv tool install
prerelease = ["serena-agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
